Bug fix during build